templates/kube-admission-controller-starter_template.yaml
---
# Source: kube-admission-controller-starter/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-kube-admission-controller-starter
  labels:
    helm.sh/chart: kube-admission-controller-starter-0.2.0
    app.kubernetes.io/name: kube-admission-controller-starter
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: https
      protocol: TCP
      name: https
  selector:
    app.kubernetes.io/name: kube-admission-controller-starter
    app.kubernetes.io/instance: release-name
---
# Source: kube-admission-controller-starter/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-kube-admission-controller-starter
  labels:
    helm.sh/chart: kube-admission-controller-starter-0.2.0
    app.kubernetes.io/name: kube-admission-controller-starter
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: kube-admission-controller-starter
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kube-admission-controller-starter
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-kube-admission-controller-starter
      securityContext:
        {}
      volumes:
        - name: tls
          secret:
            secretName: kube-admission-controller-starter
            optional: false
        - name: config-volume
          configMap:
            name: release-name-config
            items:
              - key: production.json
                path: production.json
      containers:
        - volumeMounts:
          - name: tls
            mountPath: '/var/run/secrets/tls'
            readOnly: true
          - name: config-volume
            mountPath: /var/run/config/
            readOnly: true
          name: kube-admission-controller-starter
          securityContext:
            {}
          image: "ghcr.io/curium-rocks/kube-admission-controller-starter:main"
          imagePullPolicy: Always
          ports:
            - name: https
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: https
          readinessProbe:
            tcpSocket:
              port: https
          resources:
            limits:
              cpu: "0.2"
              memory: 128Mi
            requests:
              cpu: "0.1"
              memory: 64Mi
---
# Source: kube-admission-controller-starter/templates/validating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: release-name-kube-admission-controller-starter-hooks
webhooks:
- name:  release-name-kube-admission-controller-starter.default.svc
  admissionReviewVersions: ["v1"]
  sideEffects: None
  timeoutSeconds: 1
  failurePolicy: Ignore
  rules:
  - operations: ["CREATE"]
    apiGroups: ["*"]
    apiVersions: ["*"]
    resources: ["*"]
    scope: "*"
  clientConfig:
    service:
      namespace: default
      name: release-name-kube-admission-controller-starter
      path: /api/v1/admission
